@@ -4444,6 +4444,17 @@ doesn't use the lexer_filetype key itself.</dd>
 </tbody>
 </table>
 </dd>
+<dt>xml_indent_tags</dt>
+<dd><p class="first">If this setting is set to <em>true</em>, a new line after a line ending with an
+unclosed XML/HTML tag will be automatically indented. This only applies
+to filetypes for which the HTML or XML lexer is used. Such filetypes have
+this setting in their system configuration files.</p>
+<div class="last note">
+<p class="first admonition-title">Note</p>
+<p class="last">This setting will not work if the <em>XML/HTML tag
+autocompletion</em> pref is set.</p>
+</div>
+</dd>
 </dl>
 </div>
 <div class="section">
@@ -6346,7 +6357,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-11-08 18:13 UTC.
+Generated on: 2010-11-11 17:52 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
